[package]
edition = "2021"
name = "kernel"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bitflags = "2"
buddy_system_allocator = "0.9.0"
numtoa = "0.2.4"
pasts = {version = "0.14", default-features = false}
riscv = {version = "0.10", features = ["critical-section-single-hart"]}
riscv-mem = {path = "../crates/riscv-mem"}
riscv-rt = {version = "0.11", features = ["s-mode"]}
sbi = "0.2"
spin = "0.9"
virtio-drivers = "0.3.0"
