[package]
edition = "2021"
name = "kernel"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
buddy_system_allocator = "0.9.0"
fdt-rs = {version = "0.4", default-features = false, features = ["alloc"]}
pasts = {version = "0.14", default-features = false}
riscv = {version = "0.10"}
riscv-mem = {path = "../crates/riscv-mem"}
riscv-rt = {version = "0.11", features = ["s-mode"]}
sbi = "0.2"

critical-section = {version = "1.1", default-features = false}
portable-atomic = {version = "1.2", default-features = false, features = ["critical-section"]}
spin = {version = "0.9", features = ["portable_atomic"]}

linear-allocator = {path = "../crates/linear-allocator"}
